# docs/swagger.yaml
@@ -51,6 +51,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Parfume'
+      security:
+      - ApiKeyAuth: []
       summary: Get all parfume
       tags:
       - Parfume
@@ -72,6 +74,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Parfume'
+      security:
+      - ApiKeyAuth: []
       summary: insert data parfume.
       tags:
       - Parfume
@@ -94,6 +98,8 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - ApiKeyAuth: []
       summary: Data parfume berdasarkan ID.
       tags:
       - Parfume
@@ -116,6 +122,8 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - ApiKeyAuth: []
       summary: Hapus Data parfume berdasarkan ID.
       tags:
       - Parfume
@@ -203,7 +211,14 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - ApiKeyAuth: []
       summary: update data parfume.
       tags:
       - Parfume
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
